@@ -2237,7 +2237,7 @@ fm_directory_view_display_selection_info (FMDirectoryView *view)
 		if (non_folder_size_known) {
 			char *size_string;
 
-			size_string = g_file_size_format_for_display (non_folder_size);
+			size_string = g_format_file_size_for_display (non_folder_size);
 			/* This is marked for translation in case a localiser
 			 * needs to use something other than parentheses. The
 			 * first message gives the number of items selected;
