@@ -1,6 +1,13 @@
 2007-09-28  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+	Update to the new name for g_format_file_size_for_display
+
+2007-09-28  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file.c:
         * libnautilus-private/nautilus-link.c:
         * src/file-manager/fm-icon-container.c:
         * src/nautilus-query-editor.c:
